z-index, fixed clicking on grey area

--- a/src/js/Ui/Components/SidebarsNeo/GenericSidebar.scss
+++ b/src/js/Ui/Components/SidebarsNeo/GenericSidebar.scss
@@ -288,7 +288,7 @@
 
         > .left {
           height: 24px;
-          //width: 24px;
+          width: 24px;
           display: flex;
           flex-direction: row;
           align-items: center;
@@ -300,7 +300,7 @@
 
           > .avatar {
             --avatar-size: 48px;
-            
+
           }
 
           margin-right: 32px;
