--- a/src/js/Ui/Components/SidebarsNeo/Right/ForwardSidebar.scss
+++ b/src/js/Ui/Components/SidebarsNeo/Right/ForwardSidebar.scss
@@ -8,7 +8,7 @@
   left: 0;
   backdrop-filter: brightness(0.7);
   transition: anim(backdrop-filter, 250ms);
-  z-index: 10;
+  z-index: 10000;
 
   &.hidden {
     backdrop-filter: none;
